--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.2.0",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.19",
     "gsap": "^3.14.2",
     "immer": "^11.1.4",
     "lucide-react": "^0.574.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-pdf": "^10.3.0",
     "react-tooltip": "^5.30.0",
     "tailwindcss": "^4.2.0",
     "zustand": "^5.0.11"
